--- a/app/templates/applicants.html
+++ b/app/templates/applicants.html
@@ -19,8 +19,7 @@
                 <div class="row g-4">
                     <div class="col-md-6">
                         <div class="form-floating">
-                            {{ form.full_name(class="form-control-elegant", placeholder="ФИО") }}
-                            <label>ФИО абитуриента</label>
+                            {{ form.full_name(class="form-control-elegant", placeholder="ФИО абитуриента") }}
                         </div>
                     </div>
                     <div class="col-md-4">
