--- a/app/templates/programs.html
+++ b/app/templates/programs.html
@@ -16,6 +16,10 @@
             {{ form.name(class="form-control") }}
         </div>
         <div class="form-group">
+            {{ form.school_id.label }}
+            {{ form.school_id(class="form-control") }}
+        </div>
+        <div class="form-group">
             {{ form.submit(class="btn") }}
         </div>
     </form>
