исправлено форма с привязкой ИШ к пользователю

--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -42,6 +42,12 @@
                                     <label>Роль пользователя</label>
                                 </div>
                             </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    {{ form.school_id(class="form-control-elegant form-select") }}
+                                    <label>Школа</label>
+                                </div>
+                            </div>
                         </div>
                         <div class="mt-5 text-center">
                             <button type="submit" class="btn btn-primary-elegant px-5">
