--- a/app/templates/questions.html
+++ b/app/templates/questions.html
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Add Question Modal -->
-<div class="modal fade" id="addQuestionModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="addQuestionModal"  aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header elegant-modal-header">
