--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -252,6 +252,7 @@
             transition: all 0.2s ease;
             border-left: 3px solid transparent;
         }
+        
 
         .menu-item:hover, .menu-item.active {
             background-color: rgba(255, 255, 255, 0.1);
@@ -329,6 +330,8 @@
             display: flex;
             align-items: center;
             transition: transform 0.2s ease;
+            margin-right: 15px;
+            
         }
 
         .back-btn:hover {
