--- a/app/templates/engineering_schools.html
+++ b/app/templates/engineering_schools.html
@@ -49,12 +49,18 @@
                             <td>{{ school.id }}</td>
                             <td>{{ school.name }}</td>
                             <td class="text-end">
-                                <form action="{{ url_for('routes.delete_school', school_id=school.id) }}" method="POST">
-                                    <button type="submit" class="btn btn-outline-elegant btn-sm"
-                                            onclick="return confirm('Вы уверены?')">
-                                        <i class="bi bi-trash"></i> Удалить
-                                    </button>
-                                </form>
+                                <div class="d-flex justify-content-end gap-2">
+                                    <a href="{{ url_for('routes.edit_engineering_school', school_id=school.id) }}" 
+                                       class="btn btn-outline-elegant btn-sm">
+                                        <i class="bi bi-pencil"></i> Редактировать
+                                    </a>
+                                    <form action="{{ url_for('routes.delete_school', school_id=school.id) }}" method="POST">
+                                        <button type="submit" class="btn btn-outline-elegant btn-sm"
+                                                onclick="return confirm('Вы уверены?')">
+                                            <i class="bi bi-trash"></i> Удалить
+                                        </button>
+                                    </form>
+                                </div>
                             </td>
                         </tr>
                         {% endfor %}
